# hyprwelcome

./: CMakeLists.txt  README.md
.config/: mimeapps.list  starship.toml
.config/fish/: config.fish
.config/hypr/: SURVIVAL_GUIDE.md  autostart.conf  env.conf  hypridle.conf  hyprland.conf  input.conf  monitors.conf  programs.conf  shortcuts.conf  windowrules.conf
.config/hyprwelcome/: config.toml
.config/hyprwelcome/themes/celeste-dark/: colors.toml
.config/hyprwelcome/themes/celeste-dark/templates/: hyprland-colors.conf  hyprlock.conf  hyprpaper.conf  kitty-colors.conf  mako-colors.ini  rofi-theme.rasi  waybar-colors.css
.config/kitty/: kitty.conf
.config/mako/: config
.config/rofi/: config.rasi
.config/waybar/: config.jsonc  style.css
.config/waybar/scripts/: gpu.sh  power-menu.sh  survival-guide.sh  waybar-toggle.sh
default-config/: config.toml
default-config/themes/celeste-dark/: colors.toml
src/: ActionButton.cpp  MainWindow.hpp  ThemeManager.cpp  ThemeManager.hpp  main.cpp
src/panel/: ActionButton.hpp  ConfigLoader.cpp  ConfigLoader.hpp  MainWindow.cpp  ThemeManager.cpp  ThemeManager.hpp
src/todo/: TodoItem.cpp  TodoItem.hpp  TodoRow.cpp  TodoRow.hpp  TodoStore.cpp  TodoStore.hpp  TodoWindow.cpp  TodoWindow.hpp  main.cpp
